--- a/restaurant_project/templates/activate.html
+++ b/restaurant_project/templates/activate.html
@@ -5,7 +5,7 @@
 
 Привет, {{user.username}}!
 
-Перейди по ссылке, чтобы окончить регистрацию!
+Перейди по ссылке, чтобы завершить авторизацию!
 
 http://{{domain}}{% url 'activate' uidb64=uid token=token %}
 
