--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
                 zoom: 7
             });
         }
+
     </script>
 
 
@@ -36,45 +37,52 @@
 </head>
 
 <nav class="navbar navbar-expand-lg  navbar-light bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#"><h3 class="text fw-bold"></h3></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item fw-bold ">
-          <a class="nav-link active text" aria-current="page" href="{% url 'main' %}"><h4 class="text">Главная</h4></a>
-        </li>
-        <li class="nav-item fw-bold ">
-          <a class="nav-link active text" aria-current="page" href="{% url 'contacts' %}"><h4 class="text">Контакты</h4></a>
-        </li>
-        <li class="nav-item fw-bold ">
-          <a class="nav-link active text" aria-current="page" href="{% url 'about_us' %}"><h4 class="text" id='text_nav'>О нас</h4></a>
-        </li>
-      </ul>
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#"><h3 class="text fw-bold"></h3></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item fw-bold ">
+                    <a class="nav-link active text" aria-current="page" href="{% url 'main' %}"><h4 class="text">
+                        Главная</h4></a>
+                </li>
+                <li class="nav-item fw-bold ">
+                    <a class="nav-link active text" aria-current="page" href="{% url 'contacts' %}"><h4 class="text">
+                        Контакты</h4></a>
+                </li>
+                <li class="nav-item fw-bold ">
+                    <a class="nav-link active text" aria-current="page" href="{% url 'about_us' %}"><h4 class="text"
+                                                                                                        id='text_nav'>О
+                        нас</h4></a>
+                </li>
+                <li class="nav-item fw-bold ">
+                    <a class="nav-link active text" aria-current="page" href="{% url 'menu_filter' %}"><h4 class="text"
+                                                                                                        id='text_nav'>Поиск блюдо</h4></a>
+                </li>
+            </ul>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
     </div>
+    {% if not request.user.is_authenticated %}
+    <a class='a_food' href="{% url 'register' %}"><h5 class="fw-bold text">Регистрация</h5></a>
     <br>
-    <br>
-    <br>
-    <br>
-  </div>
-  {% if not request.user.is_authenticated %}
-    <a class='a_food' href="{% url 'register' %}"><h5 class="fw-bold text">Регистрация</h5> </a>
-    <br>
-     <a class='a_food' href="{% url 'login' %}"><h5 class="fw-bold text">Авторизация</h5></a>
-  {% else %}
-  <a class='a_food' href="{% url 'logout' %}"><h5 class="fw-bold text">Выход</h5></a>
-  {% endif %}
+    <a class='a_food' href="{% url 'login' %}"><h5 class="fw-bold text">Авторизация</h5></a>
+    {% else %}
+    <a class='a_food' href="{% url 'logout' %}"><h5 class="fw-bold text">Выход</h5></a>
+    {% endif %}
 
 
 </nav>
 
 
-
 {% block content %}
 {% endblock %}
-
 
 
 <!-- Bootstrap JS -->
